Fixing button positions on mobile viewport

--- a/css/main.css
+++ b/css/main.css
@@ -358,7 +358,8 @@ h1.pitch {
 /* ----- Buttons ------*/
 .tryIt {
   width: 250px;
-  margin: 20vh auto;
+  margin: 2vh auto;
+  display: inline-block;
   border-radius: 5px;
   cursor: pointer;
   color: white;
